--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,8 +4,6 @@ project(NESEmulator)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-find_package(SDL2 REQUIRED)
-
 find_package(GTest CONFIG REQUIRED)
 if (WIN32)
 	# For Windows: Prevent overriding the parent project's compiler/linker settings
@@ -54,19 +52,13 @@ else()
 	message("Gotta update the CMakeList.txt to support this compiler")
 endif()
 
-target_compile_definitions(${PROJECT_NAME} 
-	PRIVATE 
-		SDL_MAIN_HANDLED
-)
-
-target_include_directories(${PROJECT_NAME}
-	PRIVATE 
-		SDL2::SDL2
-)
-
+find_package(SFML COMPONENTS system window graphics CONFIG REQUIRED)
 target_link_libraries(${PROJECT_NAME} 
 	PRIVATE 
-		SDL2::SDL2
+		sfml-system 
+		sfml-network 
+		sfml-graphics 
+		sfml-window
 )
 
 target_link_libraries(the_tests 
