Shit about to get real

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,6 +53,15 @@ else()
 endif()
 
 find_package(SFML COMPONENTS system window graphics CONFIG REQUIRED)
+
+target_include_directories(${PROJECT_NAME} 
+	PRIVATE 
+		sfml-system 
+		sfml-network 
+		sfml-graphics 
+		sfml-window
+)
+
 target_link_libraries(${PROJECT_NAME} 
 	PRIVATE 
 		sfml-system 
