--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,11 +6,15 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
 file(GLOB_RECURSE SOURCES
-    src/*.hpp
 	src/*.cpp 
 )
 
 add_executable(${PROJECT_NAME} ${SOURCES})
+
+target_precompile_headers(${PROJECT_NAME}
+	PRIVATE
+		src/pch.hpp
+)
 
 find_package(SFML COMPONENTS system window graphics CONFIG REQUIRED)
 
