--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,13 @@
 cmake_minimum_required(VERSION 3.15)
 project(NESEmulator)
 
+include(${CMAKE_CURRENT_SOURCE_DIR}/lib/Dependencies.cmake)
+
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
 file(GLOB_RECURSE SOURCES
 	src/*.cpp 
@@ -11,18 +15,10 @@ file(GLOB_RECURSE SOURCES
 
 add_executable(${PROJECT_NAME} ${SOURCES})
 
-target_precompile_headers(${PROJECT_NAME}
-	PRIVATE
-		src/pch.hpp
-)
-
-find_package(SFML COMPONENTS system window graphics CONFIG REQUIRED)
-
 target_include_directories(${PROJECT_NAME} 
 	PRIVATE 
-		sfml-system 
-		sfml-network 
-		sfml-graphics 
+		sfml-system
+		sfml-graphics
 		sfml-window
 		sfml-audio
 )
@@ -30,8 +26,24 @@ target_include_directories(${PROJECT_NAME}
 target_link_libraries(${PROJECT_NAME} 
 	PRIVATE 
 		sfml-system 
-		sfml-network 
 		sfml-graphics 
 		sfml-window
 		sfml-audio
 )
+
+target_precompile_headers(${PROJECT_NAME}
+	PUBLIC
+		src/pch.hpp
+)
+
+if (WIN32)
+	add_custom_command(
+        TARGET ${PROJECT_NAME}
+        COMMENT "Copy OpenAL DLL"
+        PRE_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${SFML_SOURCE_DIR}/extlibs/bin/$<IF:$<EQUAL:${CMAKE_SIZEOF_VOID_P},8>,x64,x86>/openal32.dll $<TARGET_FILE_DIR:${PROJECT_NAME}>
+        VERBATIM)
+	add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
+		COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_RUNTIME_DLLS:${PROJECT_NAME}> $<TARGET_FILE_DIR:${PROJECT_NAME}>
+		COMMAND_EXPAND_LISTS
+	)
+endif()
